EPBDS-7095 Add more paths for searching JRE
--HG--
branch : 5.20.x